Moved about text to scroll instead of overlay.

--- a/index.html
+++ b/index.html
@@ -23,22 +23,24 @@
 			</div>
 
 			<div id="AboutButton"> about </div>
+		</div>
 
-			<div id="AboutOverlay">
-				<div id="TextContainer">
-					<div id="MainText">
-						<b> Every file is automatically shareable and realtime editable, accessible from anywhere.</b> 
-						</br></br>
+		<div id="TextContainer">
+			<div id="MainText">
+				<b> Every file is automatically shareable and realtime editable, accessible from anywhere.</b> 
+				</br></br>
 
-						That's the long term goal of the Strudel project. We want to build a platform where users can create files for any possible use-case, and never have to think twice about whether they can collaborate with others. And, at the same time, we want to create a realtime collaboration API for developers to easily plug into any project they are working on.
+				That's the long term goal of the Strudel project. We want to build a platform where users can create files for any possible use-case, and never have to think twice about whether they can collaborate with others. And, at the same time, we want to create a realtime collaboration API for developers to easily plug into any project they are working on.
 
-						Files are a fundamental building block of computing, but for some reason the file concept did not make the jump to the internet era. At Strudel, we are reinventing files by building in realtime collaboration, version control, and cloud storage for every file from the get-go. We hope to eventually become the first platform to succeed at building a truly online OS.
+				Files are a fundamental building block of computing, but for some reason the file concept did not make the jump to the internet era. At Strudel, we are reinventing files by building in realtime collaboration, version control, and cloud storage for every file from the get-go. We hope to eventually become the first platform to succeed at building a truly online OS.
 
-						</br></br>
+				</br></br>
 
-						Strudel isn't quite ready for the limelight yet, but sign up for our <span id="MailingListBack">mailing list</span> to keep up to date with what we're working on!
-					</div>
-				</div>
+				Strudel isn't quite ready for the limelight yet, but sign up for our mailing list to keep up to date with what we're working on!
+
+				</br></br>
+
+				<span id="MailingListBack"> <b> About that mailing list... </br> </span>
 			</div>
 		</div>
 	</body>
