--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="SignUp">
 				<div id="Status"></div>
 				<form id="Form">
-					<input id="EmailInput" class="clean-input" type="email" placeholder="Sign up for our mailing list!" required>
+					<input id="EmailInput" class="clean-input" type="email" placeholder="myemail@website.com" required>
 					<input id="SubmitButton" type="submit" value="Send"/>
 			</div>
 
