--- a/index.html
+++ b/index.html
@@ -1,48 +1,76 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!-- Background taken from https://codepen.io/loktar00/pen/uEJKl -->
 <html>
-	<head>
-		<title>Strudel</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<link rel="icon" type="image/png" href="favicon.png">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-		<link rel="stylesheet" href="index.css" />
-	</head>
+  <head>
+    <title>Strudel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      href="https://unpkg.com/material-components-web@8.0.0/dist/material-components-web.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/material-components-web@8.0.0/dist/material-components-web.min.js"></script>
 
-	<body>
-		<div id="Container">
-			<div id="Title">
-				Strudel
-			</div>
-			<div id="SignUp">
-				<div id="Status"></div>
-				<form id="Form">
-					<input id="EmailInput" class="clean-input" type="email" placeholder="Email Address" required>
-					<input id="SubmitButton" type="submit" value="Send"/>
-			</div>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 
-			<div id="AboutButton"> about </div>
-		</div>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
 
-		<div id="TextContainer">
-			<div id="MainText">
-				<b> Every file is automatically shareable and realtime editable, accessible from anywhere.</b> 
-				</br></br>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-				That's the long term goal of the Strudel project. We want to build a platform where users can create files for any possible use-case, and never have to think twice about whether they can collaborate with others. And, at the same time, we want to create a realtime collaboration API for developers to easily plug into any project they are working on.
+  <body>
+    <div id="Container">
+      <div id="ImageContainer">
+        <h1>STRUDEL</h1>
+        <div>Collaborate on Everything</div>
+        <img src="collab.svg" />
+      </div>
 
-				Files are a fundamental building block of computing, but for some reason the file concept did not make the jump to the internet era. At Strudel, we are reinventing files by building in realtime collaboration, version control, and cloud storage for every file from the get-go. We hope to eventually become the first platform to succeed at building a truly online OS.
+      <div id="SignupContainer">
+        <section class="header">
+          <img src="logo.png" />
+          <h1>Waitlist Signup</h1>
+        </section>
 
-				</br></br>
+        <div id="Status"></div>
+        <form id="Form">
+          <label class="mdc-text-field mdc-text-field--filled email">
+            <span class="mdc-text-field__ripple"></span>
+            <span class="mdc-floating-label" id="my-label-id">
+              Email
+            </span>
+            <input
+              class="mdc-text-field__input"
+              type="email"
+              aria-labelledby="my-label-id"
+              id="EmailInput"
+              required
+            />
+            <span class="mdc-line-ripple"></span>
+          </label>
 
-				Strudel isn't quite ready for the limelight yet, but sign up for our mailing list to keep up to date with what we're working on!
+          <div class="button-container">
+            <button class="mdc-button mdc-button--raised next" id="Submit">
+              Submit
+            </button>
+          </div>
+        </form>
 
-				</br></br>
-
-				<span id="MailingListBack"> <b> About that mailing list... </br> </span>
-			</div>
-		</div>
-	</body>
-	<script src="index.js"></script>
+        <div id="SignInContainer">
+          <span> Already a member of the beta? </span>
+          <span id="SignIn">
+            <a href="#"> Sign In </a>
+          </span>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="index.js"></script>
 </html>
